--- a/package.json
+++ b/package.json
@@ -7,27 +7,11 @@
         "test": "umi-test",
         "test:coverage": "umi-test --coverage"
     },
-    "gitHooks": {
-        "pre-commit": "lint-staged"
-    },
-    "lint-staged": {
-        "*.{js,jsx,less,md,json}": [
-            "prettier --write",
-            "git add"
-        ],
-        "*.ts?(x)": [
-            "prettier --parser=typescript --write",
-            "git add"
-        ]
-    },
     "dependencies": {
         "@umijs/preset-react": "1.x",
         "@umijs/test": "^3.0.2",
-        "lint-staged": "^10.0.7",
-        "prettier": "^1.19.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
-        "umi": "^3.0.2",
-        "yorkie": "^2.0.0"
+        "umi": "^3.0.2"
     }
 }
