--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "umi": "^3.0.0-beta.38"
     },
     "devDependencies": {
+        "@types/qs": "^6.9.1",
         "@umijs/plugin-webpack-5": "^0.1.3",
         "less-vars-to-js": "^1.3.0"
     }
