--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "devDependencies": {
         "@types/qs": "^6.9.1",
         "@umijs/plugin-webpack-5": "^0.1.3",
+        "empty-module": "0.0.2",
         "less-vars-to-js": "^1.3.0"
     }
 }
