--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "qs": "^6.9.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "store": "^2.0.12",
         "umi": "^3.0.0-beta.38"
     },
     "devDependencies": {
