--- a/package.json
+++ b/package.json
@@ -1,45 +1,52 @@
 {
-    "version": "1.0.0",
-    "name": "antos",
-    "author": "matrixage",
-    "license": "MIT",
-    "private": true,
-    "main": "src/pages/index.tsx",
-    "description": "A admin which is simple & practical for the enterprise.",
-    "keywords": [
-        "web",
-        "react",
-        "react hooks",
-        "js",
-        "javascript",
-        "umi",
-        "umijs",
-        "antd",
-        "ant design",
-        "admin",
-        "dashboard"
-    ],
-    "scripts": {
-        "start": "umi dev",
-        "build": "umi build",
-        "test": "umi-test",
-        "test:coverage": "umi-test --coverage"
-    },
-    "dependencies": {
-        "@umijs/preset-react": "^1.3.2",
-        "@umijs/test": "^3.0.2",
-        "dva-model-extend": "^0.1.2",
-        "moment": "^2.24.0",
-        "qs": "^6.9.1",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "store": "^2.0.12",
-        "umi": "^3.0.0-beta.38"
-    },
-    "devDependencies": {
-        "@types/qs": "^6.9.1",
-        "@umijs/plugin-webpack-5": "^0.1.3",
-        "empty-module": "0.0.2",
-        "less-vars-to-js": "^1.3.0"
-    }
+      "version": "1.0.0",
+      "name": "antos",
+      "author": "matrixage",
+      "license": "MIT",
+      "private": true,
+      "main": "src/pages/index.tsx",
+      "description": "A admin which is simple & practical for the enterprise.",
+      "keywords": [
+            "web",
+            "react",
+            "react hooks",
+            "js",
+            "javascript",
+            "umi",
+            "umijs",
+            "antd",
+            "ant design",
+            "admin",
+            "dashboard"
+      ],
+      "scripts": {
+            "start": "umi dev",
+            "build": "umi build",
+            "test": "umi-test",
+            "test:coverage": "umi-test --coverage"
+      },
+      "dependencies": {
+            "@ant-design/compatible": "^1.0.1",
+            "@types/react-helmet": "^5.0.15",
+            "@types/store": "^2.0.2",
+            "@umijs/preset-react": "^1.3.2",
+            "@umijs/test": "^3.0.2",
+            "dva-model-extend": "^0.1.2",
+            "lodash": "^4.17.15",
+            "moment": "^2.24.0",
+            "path-to-regexp": "^6.1.0",
+            "qs": "^6.9.1",
+            "react": "^16.12.0",
+            "react-dom": "^16.12.0",
+            "react-helmet": "^5.2.1",
+            "store": "^2.0.12",
+            "umi": "^3.0.0-beta.38"
+      },
+      "devDependencies": {
+            "@types/qs": "^6.9.1",
+            "@umijs/plugin-webpack-5": "^0.1.3",
+            "babel-plugin-import": "^1.13.0",
+            "empty-module": "0.0.2",
+            "less-vars-to-js": "^1.3.0"
+      }
 }
