--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
       },
       "dependencies": {
             "@ant-design/compatible": "^1.0.1",
-            "@types/react-helmet": "^5.0.15",
-            "@types/store": "^2.0.2",
             "@umijs/preset-react": "^1.3.2",
             "@umijs/test": "^3.0.2",
             "dva-model-extend": "^0.1.2",
@@ -40,13 +38,16 @@
             "react-dom": "^16.12.0",
             "react-helmet": "^5.2.1",
             "store": "^2.0.12",
-            "umi": "^3.0.0-beta.38"
+            "umi": "^3.0.7",
+            "umi-plugin-router-plus": "0.0.1"
       },
       "devDependencies": {
+            "@types/mockjs": "^1.0.2",
             "@types/qs": "^6.9.1",
-            "@umijs/plugin-webpack-5": "^0.1.3",
+            "@types/react-helmet": "^5.0.15",
+            "@types/store": "^2.0.2",
             "babel-plugin-import": "^1.13.0",
-            "empty-module": "0.0.2",
-            "less-vars-to-js": "^1.3.0"
+            "less-vars-to-js": "^1.3.0",
+            "mockjs": "^1.1.0"
       }
 }
