--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
             "react-dom": "^16.12.0",
             "react-helmet": "^5.2.1",
             "store": "^2.0.12",
-            "umi": "^3.0.7",
-            "umi-plugin-router-plus": "0.0.1"
+            "umi": "^3.0.7"
       },
       "devDependencies": {
             "@types/mockjs": "^1.0.2",
